# codnot

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/codnot/: codnotConfig.cmake.in
docs/: 项目规范.md
include/codnot/: codnot.h  codnot_export.h
include/codnot/data/: data.hpp  file.hpp  resource_pool.hpp
include/codnot/data/ebt/: ebt.hpp
include/codnot/data/sery/: sery.hpp
include/codnot/data/stream/: buffer.hpp  byte_stream.hpp  stream.hpp
include/codnot/data/struct/: bit_map.hpp  struct.hpp
include/codnot/engine/: engine.hpp
include/codnot/engine/config/: config.h
src/codnot/: version.cpp
src/codnot/data/: file.cpp  resource_pool.cpp
src/codnot/data/ebt/: ebt.cpp
src/codnot/data/sery/: sery.cpp
src/codnot/data/stream/: byte_stream.cpp  stream.cpp
src/codnot/engine/: engine.cpp
test/: main.cpp
